--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(img/img.png);
+    background-image: url(img.png);
     background-size: cover;
     background-position: center;
     z-index: -1;
@@ -114,7 +114,7 @@ body {
 }
 
 .home {
-    background-image: url(img/bunga.png);
+    background-image: url(bunga.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
